- Modify fasp.h (affect all FASP projects).
  -- Change itsolver_param ==> ITS_param.
  -- Change Schwarz_* ==> SWZ_*.
  -- Change precond_diagstr ==> precond_diag_str.
  -- Reordering.
- Update parameters in ini/*.
- Change a few inconsistent function names: _array_ ==> _darray_.
- Move things around.
- Clean up all files.
- Add legal information.
- Update file dependency information.

01/28/2017 FASP 1.9.5:
- Happy Chinese New Year!
- Test GCC 5.4.0.
- Fix most warnings and mark unresolved warnings.
- Fix Doxygen problems.
- Further clean up on Aux*.c and Bla*.c files.
- Update documentation.
- Update VS10 solution.
- Add more todo's to the list.
- Move things around.
- Move function form_tentative_p_bsr to fasp4blkoil.

01/27/2017 FASP 1.9.4:
- Fix a few memory leaks.
- Update input parameters in test/ini/input.dat.
- Remove fasp_dcsr_check().
- Clean up BlaSmallMat.c: Add const, remove some functions.
- Update regression results.
- File name changed: AuxSmallMat.c ==> BlaSmallMatInv.c.
- Update a few function names in BlaSmallMatInv.c.
- Clean up Aux*.c and Bla*.c files, delete deprecated functions.
- Move things around.

01/23/2017 FASP 1.9.3:
- Clean up Level 4 (Pre) functions.
- Clean up Level 3 (Kry) functions.
- Clean up Level 2 (Itr) functions.
- Clean up Level 1 (Bla) functions.
- Clean up Level x (Xtr) functions.
- Function name change: *_Schwarz* ==> *_schwarz*.
- Change function name of a few private functions in GMG.
- Separate SA/UA AMG for CSR and BSR.
- Separate aggregation for CSR and BSR.
- Function name change: Upper case ==> Lower case in AuxThreads.c.
- Update reference manual and Doxygen.
- Update regression tests and results again.
- Update VS10 and test in Windows.

01/21/2017 FASP 1.9.2:
- Change filenames according to package structure.
- Change filenames of interface to external packages.
- Change filenames of FEM and FDM tests.
- Add file dependency in each file.
- Add description for the new structure in Doxygen.